fix contact, news page

--- a/contact.html
+++ b/contact.html
@@ -116,12 +116,7 @@
                 </div>
                 <div class="item">
                   <label for="contact-phone">Số điện thoại</label>
-                  <input
-                    type="text"
-                    id="contact-phone"
-                    placeholder="Nhập số điện thoại"
-                    pattern="/(84|0[3|5|7|8|9])+([0-9]{8})\b/g"
-                  />
+                  <input type="text" id="contact-phone" placeholder="Nhập số điện thoại" />
                 </div>
                 <div class="item">
                   <label for="contact-email">Email</label>
