create responsive contact-section and location-section

--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,36 @@
           </div>
         </div>
       </section>
+      <section class="location-section">
+        <div class="location-container">
+          <div class="wrap__map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d227042.39348844363!2d106.714825!3d10.722415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ff328f3e963%3A0xc193f57a43f34977!2sMathnasium%20Vi%E1%BB%87t%20Nam!5e1!3m2!1svi!2sus!4v1712777114401!5m2!1svi!2sus"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="wrap__dess">
+            <div class="box__content">
+              <h1>CÔNG TY TNHH APLUS MATH – VPTT MATHNASIUM VIỆT NAM</h1>
+            </div>
+            <div class="box__ress">
+              <div class="item">
+                <h3></h3>
+                <div class="content">
+                  <a href="http://SH08 Garden Court 1, Phú Mỹ Hưng, Phường Tân Phong, Quận 7, TP.HCM">
+                    SH08 Garden Court 1, Phú Mỹ Hưng, Phường Tân Phong, Quận 7, TP.HCM
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer id="footer-placeholder"></footer>
     <!-- icons -->
