fix responsive carousel

--- a/program.html
+++ b/program.html
@@ -10,6 +10,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans:400,500,700|Google+Sans+Text:400&amp;lang=vi"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Google+Sans+Text:400&amp;text=%E2%86%90%E2%86%92%E2%86%91%E2%86%93&amp;lang=vi"
+    />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/program.css" />
@@ -62,7 +78,7 @@
                 </div>
               </div>
               <div class="ad__wrap" data-aos="fade-up" data-aos-duration="700">
-                <div class="ad__item item-1">
+                <div class="ad__item item-1" data-aos="fade-up" data-aos-duration="700">
                   <div class="ad__item__wrap">
                     <h3>NỀN TẢNG</h3>
                     <p>
@@ -76,7 +92,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="ad__item item-2">
+                <div class="ad__item item-2" data-aos="fade-up" data-aos-duration="800">
                   <div class="ad__item__wrap">
                     <h3>TRẺ GẶP VẤN ĐỀ</h3>
                     <p>
@@ -90,7 +106,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="ad__item item-3">
+                <div class="ad__item item-3" data-aos="fade-up" data-aos-duration="850">
                   <div class="ad__item__wrap">
                     <h3>PHÁT TRIỂN NĂNG KHIẾU</h3>
                     <p>
@@ -153,7 +169,6 @@
             <div class="lessons__container" data-aos="fade-up" data-aos-duration="200">
               <h2>NỘI DUNG CHƯƠNG TRÌNH HỌC TIỂU HỌC</h2>
               <div class="lessons__wrap" data-aos="fade-up" data-aos-duration="700">
-                
                 <div class="lesson lesson-1">
                   <div class="title">Attributes - Thuộc Tính Vật Thể</div>
                   <div class="lesson__img">
@@ -518,10 +533,10 @@
     <script>
       AOS.init();
     </script>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="./js/program_carousel.js"></script>
   </body>
 </html>
