--- a/recruitment.html
+++ b/recruitment.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./css/recruitment.css" />
     <link rel="stylesheet" href="./css/responsiveRecruitment.css" />
     <title>Recruitment</title>
@@ -66,11 +62,9 @@
           <h2>ĐỒNG HÀNH CÙNG BẠN TRÊN CON ĐƯỜNG CHINH PHỤC THÀNH CÔNG.</h2>
 
           <p>
-            Với hệ thống hơn 27 trung tâm tại Việt Nam cùng tốc độ phát triển
-            vượt bậc, Mathnasium Việt Nam mang đến cho bạn cơ hội làm việc trong
-            môi trường năng động, chuyên nghiệp, nhân văn và nhiều cơ hội phát
-            triển bản thân. Bạn cũng sẽ nhận được mức thu nhập phù hợp với kinh
-            nghiệm, năng lực và thành tích đóng góp.
+            Với hệ thống hơn 27 trung tâm tại Việt Nam cùng tốc độ phát triển vượt bậc, Mathnasium Việt Nam mang đến cho
+            bạn cơ hội làm việc trong môi trường năng động, chuyên nghiệp, nhân văn và nhiều cơ hội phát triển bản thân.
+            Bạn cũng sẽ nhận được mức thu nhập phù hợp với kinh nghiệm, năng lực và thành tích đóng góp.
           </p>
         </div>
       </section>
@@ -85,147 +79,132 @@
             <div class="benefit__carousel--item">
               <h4>BẢO HIỂM</h4>
               <p>
-                Được hưởng đầy đủ các chế độ theo quy định Nhà nước (BHXH, BHYT,
-                BHTN, Kinh phí công đoàn,…) và các chế độ phúc lợi khác: Chế độ
-                thai sản/ hiếu hỷ, khám sức khỏe định kỳ, hỗ trợ nơi ăn/ở khi đi
-                công tác xa theo dự án.
+                Được hưởng đầy đủ các chế độ theo quy định Nhà nước (BHXH, BHYT, BHTN, Kinh phí công đoàn,…) và các chế
+                độ phúc lợi khác: Chế độ thai sản/ hiếu hỷ, khám sức khỏe định kỳ, hỗ trợ nơi ăn/ở khi đi công tác xa
+                theo dự án.
               </p>
             </div>
 
             <div class="benefit__carousel--item">
               <h4>ĐÀO TẠO</h4>
               <p>
-                Chương trình đào tạo bồi dưỡng chuyên môn được tổ chức kịp thời,
-                thường xuyên, liên tục. Nhân viên được theo học các khóa học
-                chuyên ngành cung cấp các kiến thức, kỹ năng do công ty tài trợ.
+                Chương trình đào tạo bồi dưỡng chuyên môn được tổ chức kịp thời, thường xuyên, liên tục. Nhân viên được
+                theo học các khóa học chuyên ngành cung cấp các kiến thức, kỹ năng do công ty tài trợ.
               </p>
             </div>
 
             <div class="benefit__carousel--item">
               <h4>DU LỊCH</h4>
-              <p>
-                Những chuyến du lịch, nghỉ mát kết hợp team building được tổ
-                chức hàng năm dành cho tất cả CBNV.
-              </p>
+              <p>Những chuyến du lịch, nghỉ mát kết hợp team building được tổ chức hàng năm dành cho tất cả CBNV.</p>
             </div>
 
             <div class="benefit__carousel--item">
               <h4>LƯƠNG THƯỞNG</h4>
               <p>
-                Thu nhập hấp dẫn, cạnh tranh xứng đáng theo năng lực. Ngoài mức
-                lương cứng cố định, còn được nhận hoa hồng, thưởng lễ, thưởng
-                tháng, thưởng quý, thưởng năm.
+                Thu nhập hấp dẫn, cạnh tranh xứng đáng theo năng lực. Ngoài mức lương cứng cố định, còn được nhận hoa
+                hồng, thưởng lễ, thưởng tháng, thưởng quý, thưởng năm.
               </p>
             </div>
 
             <div class="benefit__carousel--item">
               <h4>BẢO HIỂM</h4>
               <p>
-                Được hưởng đầy đủ các chế độ theo quy định Nhà nước (BHXH, BHYT,
-                BHTN, Kinh phí công đoàn,…) và các chế độ phúc lợi khác: Chế độ
-                thai sản/ hiếu hỷ, khám sức khỏe định kỳ, hỗ trợ nơi ăn/ở khi đi
-                công tác xa theo dự án.
+                Được hưởng đầy đủ các chế độ theo quy định Nhà nước (BHXH, BHYT, BHTN, Kinh phí công đoàn,…) và các chế
+                độ phúc lợi khác: Chế độ thai sản/ hiếu hỷ, khám sức khỏe định kỳ, hỗ trợ nơi ăn/ở khi đi công tác xa
+                theo dự án.
               </p>
             </div>
 
             <div class="benefit__carousel--item">
               <h4>ĐÀO TẠO</h4>
               <p>
-                Chương trình đào tạo bồi dưỡng chuyên môn được tổ chức kịp thời,
-                thường xuyên, liên tục. Nhân viên được theo học các khóa học
-                chuyên ngành cung cấp các kiến thức, kỹ năng do công ty tài trợ.
+                Chương trình đào tạo bồi dưỡng chuyên môn được tổ chức kịp thời, thường xuyên, liên tục. Nhân viên được
+                theo học các khóa học chuyên ngành cung cấp các kiến thức, kỹ năng do công ty tài trợ.
               </p>
             </div>
 
             <div class="benefit__carousel--item">
               <h4>DU LỊCH</h4>
-              <p>
-                Những chuyến du lịch, nghỉ mát kết hợp team building được tổ
-                chức hàng năm dành cho tất cả CBNV.
-              </p>
+              <p>Những chuyến du lịch, nghỉ mát kết hợp team building được tổ chức hàng năm dành cho tất cả CBNV.</p>
             </div>
 
             <div class="benefit__carousel--item">
               <h4>LƯƠNG THƯỞNG</h4>
               <p>
-                Thu nhập hấp dẫn, cạnh tranh xứng đáng theo năng lực. Ngoài mức
-                lương cứng cố định, còn được nhận hoa hồng, thưởng lễ, thưởng
-                tháng, thưởng quý, thưởng năm.
+                Thu nhập hấp dẫn, cạnh tranh xứng đáng theo năng lực. Ngoài mức lương cứng cố định, còn được nhận hoa
+                hồng, thưởng lễ, thưởng tháng, thưởng quý, thưởng năm.
               </p>
             </div>
           </div>
         </div>
       </section>
-      <div class="job">
-        <h2>VỊ TRÍ TUYỂN DỤNG</h2>
-        <table class="table__td">
-          <thead>
-            <tr>
-              <th>STT</th>
-              <th>VỊ TRÍ TUYỂN DỤNG</th>
-              <th>ĐĂNG TUYỂN</th>
-              <th>NƠI LÀM VIỆC</th>
-              <th>NGÀY HẾT HẠN</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>01</td>
-              <td>Giáo viên dạy Toán Trung học cơ sở</td>
-              <td><a>Ứng tuyển</a></td>
-              <td>Toàn quốc</td>
-              <td>31/12/2024</td>
-            </tr>
-            <tr>
-              <td>02</td>
-              <td>Giáo viên dạy Toán Tiểu học</td>
-              <td><a>Ứng tuyển</a></td>
-              <td>Toàn quốc</td>
-              <td>31/12/2024</td>
-            </tr>
-            <tr>
-              <td>03</td>
-              <td>Quản Lý Trung Tâm</td>
-              <td><a>Ứng tuyển</a></td>
-              <td>Toàn quốc</td>
-              <td>31/12/2024</td>
-            </tr>
-            <tr>
-              <td>04</td>
-              <td>Giáo viên dạy Toán Mầm Non</td>
-              <td><a>Ứng tuyển</a></td>
-              <td>Toàn quốc</td>
-              <td>31/12/2024</td>
-            </tr>
-            <tr>
-              <td>05</td>
-              <td>Nhân viên Tư Vấn</td>
-              <td><a>Ứng tuyển</a></td>
-              <td>Toàn quốc</td>
-              <td>31/12/2024</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <section class="job">
+        <div class="jon-container">
+          <div class="box__content">
+            <h2>VỊ TRÍ TUYỂN DỤNG</h2>
+          </div>
+          <div class="box__table">
+            <table>
+              <thead>
+                <tr>
+                  <th>STT</th>
+                  <th>VỊ TRÍ TUYỂN DỤNG</th>
+                  <th>ĐĂNG TUYỂN</th>
+                  <th>NƠI LÀM VIỆC</th>
+                  <th>NGÀY HẾT HẠN</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>01</td>
+                  <td>Giáo viên dạy Toán Trung học cơ sở</td>
+                  <td><a>Ứng tuyển</a></td>
+                  <td>Toàn quốc</td>
+                  <td>31/12/2024</td>
+                </tr>
+                <tr>
+                  <td>02</td>
+                  <td>Giáo viên dạy Toán Tiểu học</td>
+                  <td><a>Ứng tuyển</a></td>
+                  <td>Toàn quốc</td>
+                  <td>31/12/2024</td>
+                </tr>
+                <tr>
+                  <td>03</td>
+                  <td>Quản Lý Trung Tâm</td>
+                  <td><a>Ứng tuyển</a></td>
+                  <td>Toàn quốc</td>
+                  <td>31/12/2024</td>
+                </tr>
+                <tr>
+                  <td>04</td>
+                  <td>Giáo viên dạy Toán Mầm Non</td>
+                  <td><a>Ứng tuyển</a></td>
+                  <td>Toàn quốc</td>
+                  <td>31/12/2024</td>
+                </tr>
+                <tr>
+                  <td>05</td>
+                  <td>Nhân viên Tư Vấn</td>
+                  <td><a>Ứng tuyển</a></td>
+                  <td>Toàn quốc</td>
+                  <td>31/12/2024</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
     <footer id="footer-placeholder"></footer>
     <script src="sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-1.11.0.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="./js/carouselKhoi.js"></script>
+    <script src="./js/recruitmentCarousel.js"></script>
   </body>
 </html>
