create file config

--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
     <title>BeanMind</title>
   </head>
@@ -308,7 +309,6 @@
       </div>
 
       <div class="team__pic">
-
         <div class="team__pic--left">
           <img src="./img/Rectangle-636.png" alt="" />
         </div>
@@ -348,7 +348,6 @@
             </div>
           </div>
         </div>
-        
       </div>
     </section>
 
