--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <!-- css -->
     <link rel="stylesheet" href="./css/homepage.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Mathnasium</title>
   </head>
 
