--- a/footer.html
+++ b/footer.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="stylesheet" href="./css/register.css" />
     <link rel="stylesheet" href="./css/footer.css" />
