content 3 page program

--- a/program.html
+++ b/program.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/program.css" />
-    <title>studyProgram</title>
+    <title>Chương trình tiểu học</title>
   </head>
   <body>
     <header id="header-placeholder"></header>
@@ -73,14 +73,15 @@
               <div class="ad__text">
                 <h2>ƯU ĐIỂM VỀ CHƯƠNG TRÌNH HỌC</h2>
                 <div class="ad__content">
-                  “Chủ động trong vấn đề học là chủ yếu, dựa trên việc tự ý thức, trẻ sẽ tự đưa ra cách giải quyết và
-                  chịu trách nhiệm với kết quả mang lại.”
+                  “”
                 </div>
               </div>
               <div class="ad__wrap" data-aos="fade-up" data-aos-duration="700">
                 <div class="ad__item item-1" data-aos="fade-up" data-aos-duration="700">
                   <div class="ad__item__wrap">
                     <h3>NỀN TẢNG</h3>
+                    <p>• Chủ động trong vấn đề học là chủ yếu, dựa trên việc tự ý thức, trẻ sẽ tự đưa ra cách giải quyết và
+                      chịu trách nhiệm với kết quả mang lại.</p>
                     <p>
                       • Bé có cơ hội tiếp xúc với phương pháp học toán của các nước có nền giáo dục hàng đầu thế giới.
                     </p>
