done content page thcs

--- a/thcs.html
+++ b/thcs.html
@@ -103,13 +103,12 @@
                   <div class="ad__item__wrap">
                     <h3>TRẺ GẶP VẤN ĐỀ</h3>
                     <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
-                    <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
-                    <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
-                    <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
-                    <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
-                    <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
-                    <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
-                    <p>1. Thử các cách tiếp cận khác nhau để làm cho môn toán trở nên thú vị</p>
+                    <p>2. Áp dụng kiến thức toán tư duy vào cuộc sống hằng ngày</p>
+                    <p>3. Cùng con học toán tư duy: Luyện tập mỗi tối</p>
+                    <p>4. Xác định các khó khăn của trẻ khi học toán tư duy</p>
+                    <p>5. Có thái độ tích cực</p>
+                    <p>6. Thuê gia sư giúp trẻ học toán tư duy</p>
+                    <p>7. Xem xét quá trình học tập của trẻ</p>
 
                     <img src="./icon/image__1_-removebg-preview.png" alt="" />
                     <div class="icon">
@@ -120,10 +119,16 @@
                 <div class="ad__item item-3" data-aos="fade-up" data-aos-duration="850">
                   <div class="ad__item__wrap">
                     <h3>PHÁT TRIỂN NĂNG KHIẾU</h3>
+                    <p>• Rèn luyện Tư duy</p>
+                    <p>• Tăng cường khả năng diễn đạt bằng ngôn từ</p>
+                    <p>• Ứng dụng quan sát hình ảnh trực quan</p>
+                    <p>• Sử dụng giáo cụ giảng dạy</p>
+                    <p>• Toán viết.</p>
                     <p>
-                      Trẻ có năng khiếu trong môn Toán nhưng chưa được nuôi dưỡng đúng cách hay có năng lực tốt trong
-                      môn học, Mathnasium luôn có cách để trẻ toả sáng khi được trao cơ hội chinh phục thử thách, làm
-                      chủ các khái niệm phức tạp với phương pháp học tập Tư duy đầy tích cực.
+                      5 kỹ thuật này sẽ được tích hợp và bổ sung cho nhau để giúp bé học và củng cố kiến thức toán tốt
+                      nhất tại Beanmind. Để từ đó có thể giúp con tiếp thu kiến thức toán học tốt nhất, phát triển tư
+                      duy hiệu quả nhưng không khiến bé cảm thấy nhàm chán hay áp lực, và đó cũng là điều Beandmind luôn
+                      hướng tới con em chúng ta.
                     </p>
                     <img src="./icon/image__1_-removebg-preview.png" alt="" />
                     <div class="icon">
