change content homepage, about, contact,footer

--- a/about.html
+++ b/about.html
@@ -114,8 +114,8 @@
       <div class="introduce__desc">
         <h1>GIỚI THIỆU VỀ TÁC GIẢ</h1>
         <p>
-          Mathnasium là nơi học sinh rèn luyện để phát triển Tư duy thông qua
-          Toán học
+          BeanMind là nơi học sinh rèn luyện để phát triển Tư duy thông qua Toán
+          học
         </p>
       </div>
       <!-- item 1 -->
@@ -241,7 +241,7 @@
     <section class="reason">
       <h1>
         VÌ SAO NÊN CHỌN <br />
-        MATHNASIUM?
+        BEANMIND?
       </h1>
       <div
         data-aos="fade-down"
