--- a/header.html
+++ b/header.html
@@ -37,12 +37,14 @@
             <li><a href="./about.html"> Về BeanMind </a></li>
             <li><a href="./news.html">Ưu đãi- sự kiện</a></li>
             <li class="li--dropdown">
-              <a class="li--dropdown--hover" href=""> Chương trình học <i class="fa-solid fa-chevron-down"></i></a>
+              <a class="li--dropdown--hover" href="./method.html">
+                Chương trình học <i class="fa-solid fa-chevron-down"></i
+              ></a>
               <ul class="li--dropdown--content">
-                <li><a href="#">Phương pháp học tập</a></li>
-                <li><a href="#">Khởi đầu</a></li>
+                <li><a href="./method.html">Phương pháp học tập</a></li>
+                <li><a href="./junior.html">Khởi đầu</a></li>
                 <li><a href="./program.html">Tiểu học</a></li>
-                <li><a href="#">Trung học cơ sở</a></li>
+                <li><a href="./thcs.html">Trung học cơ sở</a></li>
               </ul>
             </li>
             <li><a href="">Hệ thống trung tâm</a></li>
