config all page

--- a/footer.html
+++ b/footer.html
@@ -181,7 +181,7 @@
           <div class="box">
             <div class="box__img">
               <a href="">
-                <img width="71" height="66" src="./assets/img/homepage-imgs/icon logo-04-04.png" alt="" />
+                <img width="71" height="66" src="./assets/img/About-imgs/icon logo-04.png" alt="" />
               </a>
             </div>
             <ul class="item__img">
