--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./css/homepage.css" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
     <title>BeanMind</title>
   </head>
 
@@ -81,7 +82,7 @@
               </li>
             </ul>
             <div class="box__content">
-              <p>MATHNASIUM VIỆT NAM - TOÁN TƯ DUY HOA KỲ</p>
+              <p>Beanmind VIỆT NAM - TOÁN TƯ DUY HOA KỲ</p>
             </div>
           </div>
         </div>
@@ -107,9 +108,9 @@
                   >
                 </p>
                 <p class="content-subDescription">
-                  Tính ưu việt của phương pháp Mathnasium đã được kiểm nghiệm qua hơn 45 năm ứng dụng tại các trường
-                  công lập, tư thục, các trung tâm bồi dưỡng Toán tại Hoa Kỳ. Mathnasium đang đứng đầu về tốc độ phát
-                  triển chuyên ngành giáo dục Toán cho trẻ em trên toàn thế giới.
+                  Tính ưu việt của phương pháp Beanmind đã được kiểm nghiệm qua hơn 45 năm ứng dụng tại các trường công
+                  lập, tư thục, các trung tâm bồi dưỡng Toán tại Hoa Kỳ. Beanmind đang đứng đầu về tốc độ phát triển
+                  chuyên ngành giáo dục Toán cho trẻ em trên toàn thế giới.
                 </p>
               </div>
               <div class="box__btn">
@@ -120,7 +121,7 @@
           </div>
 
           <div data-aos="zoom-in" class="warp__first">
-            <div class="item">
+            <!-- <div class="item">
               <div class="box__icon">
                 <img
                   style="width: 48px"
@@ -168,6 +169,11 @@
                 <div class="counter">+12,000</div>
                 <h3>Học viên đang theo học</h3>
               </div>
+            </div> -->
+            <div class="box_video">
+              <video autoplay>
+                <source src="./assets/img/homepage-imgs/logo-01-01_3.mp4" />
+              </video>
             </div>
           </div>
           <div class="warp__last">
@@ -216,9 +222,12 @@
             <div data-aos="fade-up" class="box__content">
               <div class="content">
                 <p>
-                  Đặc biệt, Mathnasium mang đến cho trẻ em Việt Nam cơ hội tiếp cận chương trình Toán Tư duy & phương
-                  pháp giáo dục hiện đại với học phí chỉ bằng 25% so với các trung tâm tại Hoa Kỳ.
+                  Đặc biệt, Beanmind mang đến cho trẻ em Việt Nam cơ hội tiếp cận chương trình Toán Tư duy & phương pháp
+                  giáo dục hiện đại với học phí chỉ bằng 25% so với các trung tâm tại Hoa Kỳ.
                 </p>
+                <div class="boxContent_img">
+                  <img src="./assets/img/About-imgs/bean-05.png" alt="" />
+                </div>
               </div>
             </div>
           </div>
@@ -288,9 +297,9 @@
       </section>
       <section class="thinkAbout__section">
         <div data-aos="zoom-in" class="thinkAbout__content">
-          <h1>phụ huynh nghĩ gì về mathnasium</h1>
+          <h1>phụ huynh nghĩ gì về Beanmind</h1>
           <p>
-            “Nếu Gymnasium là nơi tập luyện để phát triển thể lực thì Mathnasium là nơi học sinh rèn luyện để phát triển
+            “Nếu Gymnasium là nơi tập luyện để phát triển thể lực thì Beanmind là nơi học sinh rèn luyện để phát triển
             Tư duy, trí thông minh thông qua Toán học.”
           </p>
         </div>
@@ -302,7 +311,7 @@
             <div class="box__content">
               <p>
                 "Năng lực của Hoài Thương được phát hiện khi con gần 2 tuổi. Từ đó, ba mẹ bắt đầu nghiên cứu tìm tòi các
-                khoá học phù hợp để nuôi dưỡng tài năng của con. Khi chọn Mathnasium, ba mẹ hoàn toàn tin tưởng phương
+                khoá học phù hợp để nuôi dưỡng tài năng của con. Khi chọn Beanmind, ba mẹ hoàn toàn tin tưởng phương
                 pháp giảng dạy, môi trường tạo điều kiện tốt nhất cho bé phát triển Tư duy."
               </p>
               <div class="des">
@@ -316,7 +325,7 @@
             </div>
             <div class="box__content">
               <p>
-                “Mẹ rất vui vì Nam có thể tự làm bài tập về nhà. Nhờ Thầy Cô Mathnasium kèm cặp và quan tâm để tinh thần
+                “Mẹ rất vui vì Nam có thể tự làm bài tập về nhà. Nhờ Thầy Cô Beanmind kèm cặp và quan tâm để tinh thần
                 học tập của con luôn tốt và đạt hiệu quả học tập tốt nhất. ”
               </p>
               <div class="des">
@@ -331,8 +340,7 @@
             <div class="box__content">
               <p>
                 “Đích đến cuối cùng của Toán học không chỉ là sự chính xác của con số, mà là phương pháp Tư duy, giải
-                quyết vấn đề. Tôi tìm thấy điều này trong phương pháp giáo dục và giáo trình Toán Tư duy của
-                Mathnasium.”
+                quyết vấn đề. Tôi tìm thấy điều này trong phương pháp giáo dục và giáo trình Toán Tư duy của Beanmind.”
               </p>
 
               <div class="des">
@@ -364,7 +372,7 @@
               <p>
                 "Từ nhỏ, Khang đã có năng khiếu và rất yêu thích Toán học. Khang học hành rất chăm chỉ, luôn hoàn thành
                 bài tập về nhà và các bài Toán nâng cao. Để phát triển Tư duy Toán học của con hơn nữa, Ba Mẹ tin tưởng
-                cho con theo học Toán Tư duy tại Mathnasium."
+                cho con theo học Toán Tư duy tại Beanmind."
               </p>
 
               <div class="des">
@@ -380,7 +388,7 @@
             <h1>
               Tin tức & Sự kiện
               <br />
-              từ mathnasium
+              từ Beanmind
             </h1>
           </div>
           <div data-aos="zoom-in" class="grid__container">
@@ -395,7 +403,7 @@
                     <div class="month">03-2024</div>
                   </div>
                   <div class="content">
-                    <h3>Khóa hè 8 tuần chủ đề “Đa trí thông minh” tại Mathnasium Việt Nam</h3>
+                    <h3>Khóa hè 8 tuần chủ đề “Đa trí thông minh” tại Beanmind Việt Nam</h3>
                   </div>
                 </div>
               </a>
@@ -411,7 +419,7 @@
                     <div class="month">03-2024</div>
                   </div>
                   <div class="content">
-                    <h3>Khai trương trung tâm Toán Tư duy Mathnasium tại Bình Thạnh</h3>
+                    <h3>Khai trương trung tâm Toán Tư duy Beanmind tại Bình Thạnh</h3>
                   </div>
                 </div>
               </a>
@@ -442,14 +450,10 @@
           </div>
         </div>
       </section>
-      <section class="system-section">
+      <!-- <section class="system-section">
         <div class="system-container container">
           <div data-aos="fade-up" class="box__content-left">
             <h1>Hệ Thống Trung tâm</h1>
-            <!-- <p>
-              Đứng đầu về tốc độ phát triển chuyên ngành giáo dục Toán Tư duy cho trẻ em trên toàn thế giới. Tại Việt
-              Nam, Mathnasium sở hữu hệ thống hơn 27 trung tâm.
-            </p> -->
             <div class="box__btn">
               XEM CHI TIẾT
               <ion-icon class="button__icon" name="chevron-forward-outline"></ion-icon>
@@ -460,32 +464,9 @@
           </div>
           <div class="box__content-right">
             <img src="./assets/img/homepage-imgs/hệ thống.png" alt="" />
-            <!-- <div class="box__items">
-              <div class="item">
-                <div class="counter">07</div>
-                <div class="box__content">
-                  <h3>chi nhánh</h3>
-                  <h1>Hà Nội</h1>
-                </div>
-              </div>
-              <div class="item">
-                <div class="counter">05</div>
-                <div class="box__content">
-                  <h3>chi nhánh</h3>
-                  <h1>Các tỉnh thành khác</h1>
-                </div>
-              </div>
-              <div class="item">
-                <div class="counter">15</div>
-                <div class="boxcontent">
-                  <h3>chi nhánh</h3>
-                  <h1>TP.hồ chí minh</h1>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer id="footer-placeholder"></footer>
     <!-- icons -->
