--- a/program.html
+++ b/program.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/program.css" />
+    <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
     <title>Chương trình tiểu học</title>
   </head>
   <body>
@@ -38,10 +39,7 @@
         <div class="site__content">
           <section class="banner">
             <div class="banner__wrap">
-              <img
-                src="./assets/img/programs-imgs/KH-03.png"
-                alt=""
-              />
+              <img src="./assets/img/programs-imgs/KH-03.png" alt="" />
             </div>
           </section>
 
@@ -49,10 +47,7 @@
             <div class="overview__container" data-aos="fade-up">
               <div class="overview__wrap">
                 <div class="box__img" data-aos="fade-up" data-aos-duration="700">
-                  <img
-                    src="./assets/img/programs-imgs/chương trình học.jpg"
-                    alt=""
-                  />
+                  <img src="./assets/img/programs-imgs/chương trình học.jpg" alt="" />
                 </div>
                 <div class="box__text">
                   <h2>TỔNG QUAN KHÓA TIỂU HỌC</h2>
@@ -72,16 +67,16 @@
             <div class="ad__container" data-aos="fade-up">
               <div class="ad__text">
                 <h2>ƯU ĐIỂM VỀ CHƯƠNG TRÌNH HỌC</h2>
-                <div class="ad__content">
-                  “”
-                </div>
+                <div class="ad__content">“”</div>
               </div>
               <div class="ad__wrap" data-aos="fade-up" data-aos-duration="700">
                 <div class="ad__item item-1" data-aos="fade-up" data-aos-duration="700">
                   <div class="ad__item__wrap">
                     <h3>NỀN TẢNG</h3>
-                    <p>• Chủ động trong vấn đề học là chủ yếu, dựa trên việc tự ý thức, trẻ sẽ tự đưa ra cách giải quyết và
-                      chịu trách nhiệm với kết quả mang lại.</p>
+                    <p>
+                      • Chủ động trong vấn đề học là chủ yếu, dựa trên việc tự ý thức, trẻ sẽ tự đưa ra cách giải quyết
+                      và chịu trách nhiệm với kết quả mang lại.
+                    </p>
                     <p>
                       • Bé có cơ hội tiếp xúc với phương pháp học toán của các nước có nền giáo dục hàng đầu thế giới.
                     </p>
