--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./css/contact.css" />
+    <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
     <title>Contact</title>
   </head>
   <body>
