--- a/news.html
+++ b/news.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/news.css" />
+    <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
   </head>
   <body>
     <header id="header-placeholder"></header>
