--- a/recruitment.html
+++ b/recruitment.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./css/recruitment.css" />
     <link rel="stylesheet" href="./css/responsiveRecruitment.css" />
+    <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
     <title>Recruitment</title>
   </head>
 
