--- a/thcs.html
+++ b/thcs.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/thcs.css" />
+    <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
     <title>Chương trình trung học cơ sở</title>
   </head>
   <body>
@@ -38,10 +39,7 @@
         <div class="site__content">
           <section class="banner">
             <div class="banner__wrap">
-              <img
-                src="assets/img/programs-imgs/KH-02.png"
-                alt=""
-              />
+              <img src="assets/img/programs-imgs/KH-02.png" alt="" />
             </div>
           </section>
 
@@ -49,10 +47,7 @@
             <div class="overview__container" data-aos="fade-up">
               <div class="overview__wrap">
                 <div class="box__img" data-aos="fade-up" data-aos-duration="700">
-                  <img
-                    src="assets/img/programs-imgs/chương trình học (1).jpg"
-                    alt=""
-                  />
+                  <img src="assets/img/programs-imgs/chương trình học (1).jpg" alt="" />
                 </div>
                 <div class="box__text">
                   <h2>TỔNG QUAN KHÓA TRUNG HỌC CƠ SỞ</h2>
