--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
               </div>
             </div> -->
             <div class="box_video">
-              <video autoplay>
-                <source src="./assets/img/homepage-imgs/logo-01-01_3.mp4" />
+              <video autoplay loop>
+                <source src="./assets/img/homepage-imgs/yall gei.mp4" />
               </video>
             </div>
           </div>
