--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               </div>
             </div> -->
             <div class="box_video">
-              <video autoplay loop>
+              <video autoplay loop muted preload="none">
                 <source src="./assets/img/homepage-imgs/yall gei.mp4" />
               </video>
             </div>
