--- a/index.html
+++ b/index.html
@@ -171,9 +171,15 @@
               </div>
             </div> -->
             <div class="box_video">
-              <video autoplay loop muted preload="none">
-                <source src="./assets/img/homepage-imgs/yall gei.mp4" />
-              </video>
+              <!-- <video autoplay loop muted preload="none" src=""> -->
+              <video
+                autoplay
+                loop
+                muted
+                preload="auto"
+                type="video/mp4"
+                src="./assets/img/homepage-imgs/yall gei.mp4"
+              ></video>
             </div>
           </div>
           <div class="warp__last">
