config footer and homepage

--- a/footer.html
+++ b/footer.html
@@ -34,6 +34,7 @@
             <input type="email" name="email" id="email" placeholder="Email" />
             <div class="custom-select-level style-custom">
               <select id="level" name="level">
+                <option value="disabled"></option>
                 <option value="Mầm non">Mầm non</option>
                 <option value="Tiểu học">Tiểu học</option>
                 <option value="Trung học">Trung học</option>
@@ -41,6 +42,7 @@
             </div>
             <div class="custom-select-location style-custom">
               <select id="location" name="location">
+                <option value="disabled"></option>
                 <option value="Quận 9">Quận 9</option>
                 <option value="Thủ đức">Thủ đức</option>
                 <option value="Quận 11">Quận 11</option>
