--- a/contact.html
+++ b/contact.html
@@ -156,14 +156,13 @@
           <div class="wrap__dess">
             <div class="wrap__map">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d227042.39348844363!2d106.714825!3d10.722415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ff328f3e963%3A0xc193f57a43f34977!2sMathnasium%20Vi%E1%BB%87t%20Nam!5e1!3m2!1svi!2sus!4v1712777114401!5m2!1svi!2sus"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.643324458103!2d106.82928407451791!3d10.838583758045209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317521f262b6cfc1%3A0xe0d11efc355e194e!2sS2.02%20Vinhomes%20Grand%20Park!5e0!3m2!1svi!2s!4v1713865077384!5m2!1svi!2s"
                 width="600"
                 height="450"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
-                class="map"
               ></iframe>
             </div>
             <div class="wrap__desc">
