--- a/about.html
+++ b/about.html
@@ -90,66 +90,77 @@
               </li>
             </ul>
             <div class="box__content">
-              <p>MATHNASIUM VIỆT NAM - TOÁN TƯ DUY HOA KỲ</p>
+              <p>Beandmind giỏi toán vững tin</p>
             </div>
           </div>
         </div>
       </section>
       <section class="introduce-section">
         <div class="introduce-container container">
-          <div class="introduce__content">
-            <h1>GIỚI THIỆU VỀ TÁC GIẢ</h1>
-            <p>BeanMind là nơi học sinh rèn luyện để phát triển Tư duy thông qua Toán học</p>
-          </div>
           <div class="wrap__dess">
             <div class="item">
               <div data-aos="flip-left" class="box__content">
-                <div class="counter">01</div>
-                <p>
-                  <strong>
-                    Cách đây hơn 45 năm, Larry Martinek – Giáo sư Toán học người Mỹ và là cha của một cậu con trai đam
-                    mê Toán học
-                  </strong>
-                  – mong muốn tìm được phương pháp học Toán tốt nhất cho con trai cũng như các học trò của mình. Trước
-                  những thôi thúc ấy cùng với lòng yêu nghề, giáo sư Larry đã dành toàn bộ sự nghiệp của mình để nghiên
-                  cứu và tìm ra phương pháp dạy và học Toán tốt nhất, giúp các em học sinh có được nền tảng kiến thức
-                  Toán vững chắc và kỹ năng Tư duy để thành công hơn.
-                </p>
+                <div class="introduce__content">
+                  <h1>TOÁN TƯ DUY LÀ GÌ</h1>
+                </div>
+                <div class="content">
+                  <div class="counter">01</div>
+                  <p>
+                    <strong>
+                      Cách đây hơn 45 năm, Larry Martinek – Giáo sư Toán học người Mỹ và là cha của một cậu con trai đam
+                      mê Toán học
+                    </strong>
+                    – mong muốn tìm được phương pháp học Toán tốt nhất cho con trai cũng như các học trò của mình. Trước
+                    những thôi thúc ấy cùng với lòng yêu nghề, giáo sư Larry đã dành toàn bộ sự nghiệp của mình để
+                    nghiên cứu và tìm ra phương pháp dạy và học Toán tốt nhất, giúp các em học sinh có được nền tảng
+                    kiến thức Toán vững chắc và kỹ năng Tư duy để thành công hơn.
+                  </p>
+                </div>
               </div>
               <div data-aos="zoom-out" class="box__img">
-                <img src="./img/Rectangle-418-1.png" alt="" />
+                <img src="/assets/img/About-imgs/1.jpg" alt="" />
               </div>
             </div>
             <div class="item">
               <div data-aos="zoom-out" class="box__img">
-                <img src="./img/14-2-1.png" alt="" />
+                <img src="/assets/img/About-imgs/2.jpg" alt="" />
               </div>
-              <div data-aos="flip-right" class="box__content">
-                <div class="counter">02</div>
-                <p>
-                  <strong> Qua hơn 45 năm kiểm nghiệm và chứng minh, </strong>
-                  – phương pháp Beanmind đã chứng tỏ được sự ưu việt khi giúp hàng triệu trẻ em trên thế giới trở nên
-                  yêu thích Toán và phát triển Tư duy vượt trội. Tài liệu học tập và phương pháp của Giáo sư Larry ngày
-                  càng được sử dụng rộng rãi trong nhiều năm sau đó. Ở Los Angeles, ông được mệnh danh là “Larry, The
-                  Math Guy”.
-                </p>
+              <div data-aos="flip-left" class="box__content">
+                <div class="introduce__content">
+                  <h1>TOÁN TƯ DUY ĐEM LẠI LỢI ÍCH GÌ</h1>
+                </div>
+                <div class="content">
+                  <div class="counter">02</div>
+                  <p>
+                    <strong> Qua hơn 45 năm kiểm nghiệm và chứng minh, </strong>
+                    – phương pháp Beanmind đã chứng tỏ được sự ưu việt khi giúp hàng triệu trẻ em trên thế giới trở nên
+                    yêu thích Toán và phát triển Tư duy vượt trội. Tài liệu học tập và phương pháp của Giáo sư Larry
+                    ngày càng được sử dụng rộng rãi trong nhiều năm sau đó. Ở Los Angeles, ông được mệnh danh là “Larry,
+                    The Math Guy”.
+                  </p>
+                </div>
               </div>
             </div>
             <div class="item">
               <div data-aos="flip-left" class="box__content">
-                <div class="counter">03</div>
-                <p>
-                  Thay vì dựa vào phương pháp học thuộc lòng truyền thống và làm các bài tập lặp đi lặp lại, giáo sư
-                  Larry tập trung vào việc giúp các em suy nghĩ tích cực về môn Toán,
+                <div class="introduce__content">
+                  <h1>TOÁN TƯ DUY KẾT HỢP VỚI STEM</h1>
+                </div>
+                <div class="content">
+                  <div class="counter">03</div>
+                  <p>
+                    Thay vì dựa vào phương pháp học thuộc lòng truyền thống và làm các bài tập lặp đi lặp lại, giáo sư
+                    Larry tập trung vào việc giúp các em suy nghĩ tích cực về môn Toán,
 
-                  <strong>
-                    thấu hiểu và phân tích bản chất của các bài Toán hoặc vấn đề gặp phải, từ đó vận dụng Tư duy để giải
-                    quyết.
-                  </strong>
-                </p>
+                    <strong>
+                      thấu hiểu và phân tích bản chất của các bài Toán hoặc vấn đề gặp phải, từ đó vận dụng Tư duy để
+                      giải quyết.
+                    </strong>
+                  </p>
+                </div>
               </div>
               <div data-aos="zoom-out" class="box__img">
-                <img src="./img/Rectangle-419-1.png" alt="" />
+                <img src="/assets/img/About-imgs/3.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -304,13 +315,20 @@
             </p>
           </div>
           <div data-aos="fade-up" class="wrap--team">
-            <img class="team--teacher" src="./img/Anh-doi-ngu-giao-vien_1200x675_2.jpg" alt="" />
+            <img
+              class="team--teacher"
+              src="/assets/img/About-imgs/little-gile-class-writing-with-teacher-helping.jpg"
+              alt=""
+            />
           </div>
         </div>
       </section>
       <section data-aos="fade-up" class="contact__section">
         <div class="contact__pic--left">
-          <img src="./img/Rectangle-636.png" alt="" />
+          <img
+            src="/assets/img/About-imgs/handstouching-light-bulb-with-graduation-hat-wooden-cubes-stacked-internet-education-course-degree-elearning-graduate-certificate-program-concept-study-knowledge-creative-thinking-ideas.jpg"
+            alt=""
+          />
         </div>
 
         <div class="contact__pic--right">
