add color and background

--- a/program1.html
+++ b/program1.html
@@ -28,16 +28,16 @@
     />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/junior.css" />
+    <link rel="stylesheet" href="./css/program.css" />
     <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
-    <title>Chương trình khởi đầu</title>
+    <title>Chương trình tiểu học 1</title>
   </head>
   <body>
     <header id="header-placeholder"></header>
     <main>
       <section data-aos="zoom-in" class="juniorBanner-section">
         <div class="box__img">
-          <img src="assets/img/programs-imgs/banner-01.png" alt="" />
+          <img src="assets/img/programs-imgs/banner-03.png" alt="" />
         </div>
         <div class="banner__side">
           <div class="nav">
@@ -79,13 +79,14 @@
           </div>
         </div>
       </section>
+
       <section class="overview-section">
         <div class="overview__container container" data-aos="fade-up">
           <div class="box__img" data-aos="fade-up" data-aos-duration="700">
             <img src="assets/img/programs-imgs/chương trình học khởi đầu.jpg" alt="" />
           </div>
           <div class="box__text">
-            <h1>TỔNG QUAN KHÓA Ươm mần</h1>
+            <h1>TỔNG QUAN KHÓA tiểu học 1</h1>
             <div class="content" data-aos="fade-up" data-aos-duration="500">
               Đây là nguồn khởi đầu giai đoạn vàng của các bé phát triển nhanh nhất nền tảng ban đầu về kiến thức Toán
               đặt biệt tại Beanmind kết hợp với phương pháp Stem đây là điểm mạnh mà Beanmind muốn hướng tới đến bé.
