--- a/header.html
+++ b/header.html
@@ -42,9 +42,10 @@
               ></a>
               <ul class="li--dropdown--content">
                 <li><a href="./method.html">Phương pháp học tập</a></li>
-                <li><a href="./junior.html">Khởi đầu</a></li>
-                <li><a href="./program.html">Tiểu học</a></li>
-                <li><a href="./thcs.html">Trung học cơ sở</a></li>
+                <li><a href="./junior.html">Ươm mần</a></li>
+                <li><a href="./program1.html">Tiểu học 1</a></li>
+                <li><a href="./program2.html">Tiểu học 2</a></li>
+                <li><a href="./juniorHigh.html">Trung học cơ sở</a></li>
               </ul>
             </li>
             <li><a href="">Hệ thống trung tâm</a></li>
