--- a/header.html
+++ b/header.html
@@ -48,7 +48,7 @@
                 <li><a href="./juniorHigh.html">Trung học cơ sở</a></li>
               </ul>
             </li>
-            <li><a href="">Hệ thống trung tâm</a></li>
+            <li><a href="./mainSystem.html">Hệ thống trung tâm</a></li>
             <li><a href="./recruitment.html">Tuyền dụng</a></li>
             <li><a href="./contact.html">Liên hệ</a></li>
           </ul>
