--- a/mainSystem.html
+++ b/mainSystem.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TIN TỨC VÀ ƯU ĐÃI</title>
+    <title>Hệ thống trung tâm</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/news.css" />
+    <link rel="stylesheet" href="./css/mainSystem.css" />
     <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
   </head>
   <body>
@@ -19,7 +19,7 @@
     <main>
       <section data-aos="zoom-in" class="aboutBanner-section">
         <div class="box__img">
-          <img src="./assets/img/About-imgs/quote-01.png" alt="" />
+          <img src="./assets/img/mainsystem_imgs/he thong trung tam-01.png" alt="" />
         </div>
         <div class="banner__side">
           <div class="nav">
@@ -58,55 +58,6 @@
             <div class="box__content">
               <p>Beandmind giỏi toán vững tin</p>
             </div>
-          </div>
-        </div>
-      </section>
-      <section class="newAndEvent-section">
-        <div class="newAnhEvent-container container">
-          <div data-aos="zoom-in" class="newAndEvent__content">
-            <h1>
-              Tin tức & Sự kiện
-              <br />
-              từ mathnasium
-            </h1>
-          </div>
-          <div data-aos="zoom-in" class="grid__container">
-            <div class="box__grid box__grid-main">
-              <a href="">
-                <div class="box__img">
-                  <img src="./assets/img/homepage-imgs/trang chu-01.png" alt="" />
-                </div>
-                <div class="box__content">
-                  <div class="box__date">
-                    <div class="date">26</div>
-                    <div class="month">03-2024</div>
-                  </div>
-                  <div class="content">
-                    <h3>Khóa hè 8 tuần chủ đề “Đa trí thông minh” tại Mathnasium Việt Nam</h3>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="box__grid">
-              <a href="">
-                <div class="box__img">
-                  <img src="./assets/img/homepage-imgs/hoc thu-01.png" alt="" />
-                </div>
-                <div class="box__content">
-                  <div class="box__date">
-                    <div class="date">22</div>
-                    <div class="month">03-2024</div>
-                  </div>
-                  <div class="content">
-                    <h3>Khai trương trung tâm Toán Tư duy Mathnasium tại Bình Thạnh</h3>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="box__btn">
-            XEM THÊM
-            <ion-icon class="button__icon" name="chevron-forward-outline"></ion-icon>
           </div>
         </div>
       </section>
