--- a/method.html
+++ b/method.html
@@ -52,7 +52,7 @@
               </li>
             </ul>
             <div class="box__content">
-              <p>MATHNASIUM VIỆT NAM - TOÁN TƯ DUY HOA KỲ</p>
+              <p>Beandmind giỏi toán vững tin</p>
             </div>
           </div>
         </div>
