--- a/junior.html
+++ b/junior.html
@@ -30,7 +30,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/junior.css" />
     <link rel="icon" href="./assets/img/About-imgs/icon logo-04.png" />
-    <title>Chương trình khởi đầu</title>
+    <title>Chương trình Ươm Mầm</title>
   </head>
   <body>
     <header id="header-placeholder"></header>
@@ -85,7 +85,7 @@
             <img src="assets/img/programs-imgs/chương trình học khởi đầu.jpg" alt="" />
           </div>
           <div class="box__text">
-            <h1>TỔNG QUAN KHÓA Ươm mần</h1>
+            <h1>TỔNG QUAN KHÓA Ươm mầm</h1>
             <div class="content" data-aos="fade-up" data-aos-duration="500">
               Đây là nguồn khởi đầu giai đoạn vàng của các bé phát triển nhanh nhất nền tảng ban đầu về kiến thức Toán
               đặt biệt tại Beanmind kết hợp với phương pháp Stem đây là điểm mạnh mà Beanmind muốn hướng tới đến bé.
