--- a/header.html
+++ b/header.html
@@ -42,7 +42,7 @@
               ></a>
               <ul class="li--dropdown--content">
                 <li><a href="./method.html">Phương pháp học tập</a></li>
-                <li><a href="./junior.html">Ươm mần</a></li>
+                <li><a href="./junior.html">Ươm mầm</a></li>
                 <li><a href="./program1.html">Tiểu học 1</a></li>
                 <li><a href="./program2.html">Tiểu học 2</a></li>
                 <li><a href="./juniorHigh.html">Trung học cơ sở</a></li>
