--- a/footer.html
+++ b/footer.html
@@ -121,8 +121,6 @@
             <strong>Email:</strong>
             <a href="">beanmind8888@gmail.com</a>
           </p>
-          <p>Giấy chứng nhận doanh nghiệp số: 0312201431, Ngày cấp giấy phép: 25/3/2013, Nơi cấp: SKHDT TP.HCM</p>
-          <p>Địa chỉ đăng ký kinh doanh tại 24-24bis Lý Thái Tổ, phường 2, quận 3, Tp.Hồ Chí Minh.</p>
         </div>
         <div class="quickLinks">
           <h3>Liên Kết nhanh</h3>
@@ -141,7 +139,7 @@
         <div class="studyProgram">
           <h3>Chương Trình Học</h3>
           <ul>
-            <li><a href="">Toán mần non</a></li>
+            <li><a href="">Toán mầm non</a></li>
             <li><a href="">Toán tiểu học</a></li>
             <li><a href="">Toán trung học cơ sở</a></li>
           </ul>
