--- a/juniorHigh.html
+++ b/juniorHigh.html
@@ -205,9 +205,7 @@
                   <h3>Địa chỉ</h3>
                   <div class="content">
                     <p>
-                      <a href="http://SH08 Garden Court 1, Phú Mỹ Hưng, Phường Tân Phong, Quận 7, TP.HCM">
-                        SH08 Garden Court 1, Phú Mỹ Hưng, Phường Tân Phong, Quận 7, TP.HCM
-                      </a>
+                      <a href="http://S2.02 Vinhome grandpark"> S2.02 Vinhome grandpark </a>
                     </p>
                   </div>
                 </div>
