--- a/mainSystem.html
+++ b/mainSystem.html
@@ -84,9 +84,7 @@
                   <h3>Địa chỉ</h3>
                   <div class="content">
                     <p>
-                      <a href="http://SH08 Garden Court 1, Phú Mỹ Hưng, Phường Tân Phong, Quận 7, TP.HCM">
-                        SH08 Garden Court 1, Phú Mỹ Hưng, Phường Tân Phong, Quận 7, TP.HCM
-                      </a>
+                      <a href="http://S2.02 Vinhomes Grand Park"> S2.02 Vinhomes Grand Park </a>
                     </p>
                   </div>
                 </div>
