--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
             </div>
             <div class="wrap__desc">
               <div class="box__content">
-                <h1>CÔNG TY TNHH APLUS MATH – VPTT BEANMIND VIỆT NAM</h1>
+                <h1>Hệ thống trung tâm</h1>
               </div>
               <div class="box__ress">
                 <div class="item">
