--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               </p>
 
               <div class="des">
-                <h3>Phụ huynh bé <b>Anh Khoa</b></h3>
+                <h3>Phụ huynh bé <b>Minh Trang</b></h3>
               </div>
             </div>
           </div>
