--- a/about.html
+++ b/about.html
@@ -106,14 +106,9 @@
                 <div class="content">
                   <div class="counter">01</div>
                   <p>
-                    <strong>
-                      Cách đây hơn 45 năm, Larry Martinek – Giáo sư Toán học người Mỹ và là cha của một cậu con trai đam
-                      mê Toán học
-                    </strong>
-                    – mong muốn tìm được phương pháp học Toán tốt nhất cho con trai cũng như các học trò của mình. Trước
-                    những thôi thúc ấy cùng với lòng yêu nghề, giáo sư Larry đã dành toàn bộ sự nghiệp của mình để
-                    nghiên cứu và tìm ra phương pháp dạy và học Toán tốt nhất, giúp các em học sinh có được nền tảng
-                    kiến thức Toán vững chắc và kỹ năng Tư duy để thành công hơn.
+                    Toán tư duy không chỉ đơn thuần là việc giải các phép tính phức tạp, mà còn là một quá trình tư duy,
+                    là kỹ năng phản xạ, logic và sự sáng tạo. Đó là khả năng phân tích vấn đề, suy luận logic và tìm ra
+                    giải pháp cho các thách thức mà chúng ta gặp phải hàng ngày.
                   </p>
                 </div>
               </div>
@@ -132,11 +127,9 @@
                 <div class="content">
                   <div class="counter">02</div>
                   <p>
-                    <strong> Qua hơn 45 năm kiểm nghiệm và chứng minh, </strong>
-                    – phương pháp Beanmind đã chứng tỏ được sự ưu việt khi giúp hàng triệu trẻ em trên thế giới trở nên
-                    yêu thích Toán và phát triển Tư duy vượt trội. Tài liệu học tập và phương pháp của Giáo sư Larry
-                    ngày càng được sử dụng rộng rãi trong nhiều năm sau đó. Ở Los Angeles, ông được mệnh danh là “Larry,
-                    The Math Guy”.
+                    Toán tư duy không chỉ giúp trẻ phát triển tư duy logic mà còn là nền tảng cho sự thành công trong
+                    học tập và cuộc sống. Học Toán Tư duy từ nhỏ giúp trẻ phát triển kỹ năng suy luận, giải quyết vấn đề
+                    và tư duy phản biện.
                   </p>
                 </div>
               </div>
@@ -149,13 +142,9 @@
                 <div class="content">
                   <div class="counter">03</div>
                   <p>
-                    Thay vì dựa vào phương pháp học thuộc lòng truyền thống và làm các bài tập lặp đi lặp lại, giáo sư
-                    Larry tập trung vào việc giúp các em suy nghĩ tích cực về môn Toán,
-
-                    <strong>
-                      thấu hiểu và phân tích bản chất của các bài Toán hoặc vấn đề gặp phải, từ đó vận dụng Tư duy để
-                      giải quyết.
-                    </strong>
+                    Tại Beanmind, chúng tôi không chỉ đơn giản là giúp các em học Toán tư duy hoặc STEM một cách riêng
+                    lẻ, mà chúng tôi tạo ra một môi trường học tập toàn diện, kết hợp cả hai mảng này để tạo ra trải
+                    nghiệm học tập đa chiều và thú vị nhất cho các em.
                   </p>
                 </div>
               </div>
@@ -206,7 +195,7 @@
                 <img width="130" height="130" src="./assets/img/About-imgs/beanicon-11.png" alt="" />
               </div>
               <div class="content">
-                <h3>Phát triển kỹ năng</h3>
+                <h3>Tích hợp toán với stem</h3>
                 <p>
                   Chương trình kích thích sự sáng tạo của trẻ, phát triển kỹ năng Tư duy, rèn luyện khả năng giải quyết
                   vấn đề
@@ -218,7 +207,7 @@
                 <img width="130" height="130" src="./assets/img/About-imgs/beanicon-12.png" alt="" />
               </div>
               <div class="content">
-                <h3>Bài kiểm tra Tư duy độc quyền</h3>
+                <h3>Học tập và trải nghiệm</h3>
                 <p>
                   Đánh giá chính xác năng lực hiện tại, kiến thức và các điểm mạnh, điểm yếu trong Tư duy Toán học của
                   học viên
@@ -242,7 +231,7 @@
                 <img width="130" height="130" src="./assets/img/About-imgs/beanicon-14.png" alt="" />
               </div>
               <div class="content">
-                <h3>Thái độ học tập tích cực</h3>
+                <h3>Tư duy giải quyết vấn đề</h3>
                 <p>
                   Môi trường học tập đầy cảm hứng và niềm vui, giúp trẻ yêu thích học tập và chủ động khám phá kiến thức
                 </p>
@@ -253,7 +242,7 @@
                 <img width="130" height="130" src="./assets/img/About-imgs/beanicon-15.png" alt="" />
               </div>
               <div class="content">
-                <h3>Chuyên gia lĩnh vực Toán Tư duy</h3>
+                <h3>Môi trường mở nhiều niềm vui</h3>
                 <p>Sở hữu độc quyền phương pháp Mathnasium, với hiệu quả học tập đã được chứng minh</p>
               </div>
             </div>
