--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
     <!-- javascript -->
     <script src="sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/loading.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
   </body>
