add call phoneNumber

--- a/header.html
+++ b/header.html
@@ -50,7 +50,7 @@
           <div class="header--listNav--contact__search">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
-          <div style="cursor: pointer" id="fa-solid" id="btn-phone" class="header--listNav--contact__phone">
+          <div style="cursor: pointer" id="phone" id="btn-phone" class="header--listNav--contact__phone">
             <i class="fa-solid fa-phone"></i>
           </div>
         </div>
@@ -58,7 +58,7 @@
 
       <div class="listBar">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <i id="fa-solid" class="fa-solid fa-phone"></i>
+        <i id="fa-solid phone" onclick="call()" class="fa-solid fa-phone"></i>
 
         <i id="btn-exit" class="fa-solid fa-xmark btn-exit" onclick="closeNav()"></i>
         <i id="btn-bars" class="fa-solid fa-bars btn-bars" onclick="openNav()"></i>
